<resources>
    <string name="app_name">WhoPuppy</string>
    <string name="who_puppy_name">내가 누구개</string>

    <!--로그인-->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="nick_name">닉네임</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="find_password_under_line"><u>비밀번호 찾기</u></string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="verify">인증</string>
    <string name="phone_number_hint">휴대폰번호 (01012345678)</string>
    <string name="phone_number_secret">인증번호</string>
    <string name="sign_up_reset_alert">입력하신 내용이 사라집니다.\n정말로 뒤로 가시겠습니까?</string>
    <string name="yes">네</string>
    <string name="no">아니오</string>
    <string name="password_input_error">비밀번호는 특수문자랑 영어 숫자 조합 8글자 이상이어야 합니다.</string>
    <string name="secret_key_send_success">인증번호를 전송했습니다.</string>
    <string name="secret_code_verify_success">인증에 성공했습니다.</string>
    <string name="sign_up_success">회원가입에 성공했습니다.</string>
    <string name="sign_up_failed">회원가입에 실패했습니다.</string>
    <string name="login_success">로그인 되셨습니다.</string>
    <string name="alert">알림</string>
    <string name="check_secret_code">인증 번호를 확인해주세요.</string>
    <string name="different_password">비밀번호가 다릅니다.</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="password_changed">비밀번호가 변경되었습니다.</string>
    <string name="my_page">마이페이지</string>
    <string name="chatting">채팅</string>
    <string name="board">게시판</string>
    <string name="home">메인으로</string>
    <string name="find_breed_info">궁금한 강아지의 사진을 올려보세요!!\n품종을 알려드립니다!!</string>
    <string name="go_to_find_breed_menu">지금 분석하러 가기</string>
    <string name="rehome_dog">분양 합니다</string>
    <string name="register_rehome_dog">분양하고 싶은 반려견을 등록해보세요.</string>
    <string name="want_adopt_dog">분양 원합니다</string>
    <string name="find_adopt_dog">분양받고 싶은 반려견을 찾아보세요.</string>
    <string name="adopt_review">분양 후기</string>
    <string name="find_adopt_review">다양한 사례를 확인해보세요.</string>
    <string name="abandoned_animal">유기동물</string>
    <string name="input_dog_kind">품종을 입력해주세요.</string>
    <string name="sex">성별</string>
    <string name="male">남</string>
    <string name="female">여</string>
    <string name="neutral">중성</string>
    <string name="all">전체</string>
    <string name="area">지역</string>
    <string name="confirm">확인</string>
    <string name="abandoned_animal_info">유기동물 정보</string>
    <string name="phone_number_format">연락처 : %s</string>
    <string name="sex_format">성별 : %s</string>
    <string name="age_format">나이 : %s</string>
    <string name="color_format">색깔 : %s</string>
    <string name="protect_status_format">보호 상태 : %s</string>
    <string name="protect_place_format">보호 장소 : %s</string>
    <string name="protect_place_address_format">보호 장소 주소 : %s</string>
    <string name="animal_status_format">특이사항 : %s</string>
    <string name="animal_kind_format">종 : %s</string>
    <string name="wrong_access">잘못된 접근입니다.</string>
    <string name="my_info_welcome_format">%s님 환영합니다!</string>
    <string name="open_source">오픈소스</string>
    <string name="logout">로그아웃</string>
    <string name="my_info_edit">내 정보 수정</string>
    <string name="token_expired">세션이 만료되었습니다. 재로그인 해주시기 바랍니다.</string>
    <string name="update_success">성공적으로 변경되었습니다.</string>
    <string name="ready_to_analysis">분석 시작</string>
    <string name="breed_analysis">품종 분석</string>
    <string name="please_upload_image">강아지 이미지를 눌러서 이미지를 업로드 해주세요~!</string>
    <string name="input_title">제목을 입력해주세요</string>
    <string name="select_area">지역을 선택해주세요.</string>
    <string name="input_content">본문을 입력해주세요</string>
    <string name="select_specific_area">세부 지역을 선택해주세요.</string>
    <string name="upload_image">이미지 업로드</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="chat">채팅</string>
    <string name="comment">댓글</string>
    <string name="delete_check_message">삭제 하시겠습니까?</string>
    <string name="cancel">취소</string>
    <string name="add_comment">댓글 추가…</string>
    <string name="middle_dot">·</string>
    <string name="write_complete">작성되었습니다.</string>
    <string name="press_back_button_to_exit">"\'뒤로가기\' 버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="start_new_chatting"><![CDATA[게시판 > 채팅에서 첫 대화를 시작해봐요~!]]></string>
    <string name="create_chat_room">채팅방 생성</string>
    <string name="input_chat_room_title">채팅방 제목을 입력해주세요.</string>
    <string name="write_owner">사용자가 작성하신 글입니다.</string>
    <string name="error">오류가 발생했습니다.</string>
    <string name="hello_emoji">👋</string>
</resources>
