<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_one"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/action_two"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_note_alt"
        android:title="@string/board" />

    <item
        android:id="@+id/action_three"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/chatting" />

    <item
        android:id="@+id/action_four"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/my_page" />
</menu>
