<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <TextView
            android:id="@+id/sex_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sex"
            app:layout_constraintStart_toStartOf="@+id/guide_line_start"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/sex_radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toBottomOf="@+id/sex_text_view">

            <RadioButton
                android:id="@+id/all_sex_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all" />

            <RadioButton
                android:id="@+id/male_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/neutral_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/neutral" />

        </RadioGroup>

        <TextView
            android:id="@+id/area_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/area"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toBottomOf="@+id/sex_radio_group" />

        <EditText
            android:id="@+id/area_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toBottomOf="@id/area_text_view" />

        <TextView
            android:id="@+id/confirm_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintTop_toBottomOf="@id/area_edit_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
