<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/detail_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="100dp"
                tools:context=".activity.AbandonedAnimalDetailActivity">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_line_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="20dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_line_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="20dp" />

                <ImageView
                    android:id="@+id/animal_image_view"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="30dp"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="@+id/guide_line_end"
                    app:layout_constraintStart_toStartOf="@+id/guide_line_start"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/phone_number_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/primaryTextColor"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="@+id/guide_line_end"
                    app:layout_constraintStart_toStartOf="@+id/guide_line_start"
                    app:layout_constraintTop_toBottomOf="@+id/animal_image_view"
                    tools:text="@string/phone_number_format" />

                <TextView
                    android:id="@+id/sex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/primaryTextColor"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="@+id/guide_line_end"
                    app:layout_constraintStart_toStartOf="@+id/guide_line_start"
                    app:layout_constraintTop_toBottomOf="@+id/phone_number_text_view"
                    tools:text="@string/sex_format" />

                <TextView
                    android:id="@+id/age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/primaryTextColor"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="@+id/guide_line_end"
                    app:layout_constraintStart_toStartOf="@+id/guide_line_start"
                    app:layout_constraintTop_toBottomOf="@+id/sex"
                    tools:text="@string/age_format" />

                <TextView
                    android:id="@+id/animal_kind"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/primaryTextColor"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="@+id/guide_line_end"
                    app:layout_constraintStart_toStartOf="@+id/guide_line_start"
                    app:layout_constraintTop_toBottomOf="@+id/age"
                    tools:text="@string/animal_kind_format" />

                <TextView
                    android:id="@+id/animal_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/primaryTextColor"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="@+id/guide_line_end"
                    app:layout_constraintStart_toStartOf="@+id/guide_line_start"
                    app:layout_constraintTop_toBottomOf="@+id/animal_kind"
                    tools:text="@string/color_format" />


                <TextView
                    android:id="@+id/process_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/primaryTextColor"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="@+id/guide_line_end"
                    app:layout_constraintStart_toStartOf="@+id/guide_line_start"
                    app:layout_constraintTop_toBottomOf="@+id/animal_color"
                    tools:text="@string/protect_status_format" />

                <TextView
                    android:id="@+id/current_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/primaryTextColor"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="@+id/guide_line_end"
                    app:layout_constraintStart_toStartOf="@+id/guide_line_start"
                    app:layout_constraintTop_toBottomOf="@+id/process_status"
                    tools:text="@string/animal_status_format" />

                <TextView
                    android:id="@+id/care_place_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/primaryTextColor"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="@+id/guide_line_end"
                    app:layout_constraintStart_toStartOf="@+id/guide_line_start"
                    app:layout_constraintTop_toBottomOf="@+id/current_status"
                    tools:text="@string/protect_place_format" />

                <TextView
                    android:id="@+id/care_place_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/primaryTextColor"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="@+id/guide_line_end"
                    app:layout_constraintStart_toStartOf="@+id/guide_line_start"
                    app:layout_constraintTop_toBottomOf="@+id/care_place_name"
                    tools:text="@string/protect_place_address_format" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/primaryDarkColor"
            android:src="@drawable/ic_phone_call"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
