<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.yunjaena.whopuppy.viewmodel.SignUpViewModel" />

        <import type="com.yunjaena.whopuppy.customview.ProgressStatus" />

        <import type="android.view.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/find_password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:src="@drawable/ic_arrow_back_black"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="@id/find_password_title_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/find_password_title_text_view"
                app:layout_constraintEnd_toStartOf="@+id/find_password_title_text_view" />


            <TextView
                android:id="@+id/find_password_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"
                android:text="@string/find_password"
                app:layout_constraintBottom_toTopOf="@+id/user_id"
                app:layout_constraintStart_toEndOf="@+id/back_button"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/user_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:errorIconDrawable="@null"
                android:hint="@string/id"
                app:layout_constraintTop_toBottomOf="@+id/find_password_title_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_id_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:selectAllOnFocus="true" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/user_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                app:layout_goneMarginEnd="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/phone_number_hint"
                app:layout_constraintTop_toBottomOf="@+id/user_id"
                app:layout_constraintEnd_toStartOf="@+id/phone_number_valid_check_button"
                app:layout_constraintStart_toStartOf="parent">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_phone_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:selectAllOnFocus="true" />


            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/phone_number_valid_check_button"
                style="?attr/materialButtonOutlinedStyle"
                android:enabled="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/verify"
                app:layout_constraintBottom_toTopOf="@+id/user_phone_number"
                app:layout_constraintStart_toEndOf="@+id/user_phone_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_phone_number" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/user_phone_number_secret"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                app:layout_goneMarginEnd="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/phone_number_secret"
                app:layout_constraintTop_toBottomOf="@+id/user_phone_number"
                app:layout_constraintEnd_toStartOf="@+id/user_phone_number_secret_check_button"
                app:layout_constraintStart_toStartOf="parent">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_phone_number_secret_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="6"
                    android:inputType="numberSigned"
                    android:selectAllOnFocus="true" />


            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/user_phone_number_secret_check_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/confirm"
                app:layout_constraintTop_toTopOf="@id/user_phone_number_secret"
                app:layout_constraintStart_toEndOf="@+id/user_phone_number_secret"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/user_phone_number_secret" />


            <Button
                android:id="@+id/find_password_button"
                android:enabled="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/change_password"
                app:layout_constraintTop_toBottomOf="@+id/user_phone_number_secret"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
